<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_blockedUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/blockRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_rude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/rude" />

            <RadioButton
                android:id="@+id/radio_scam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/scamming" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/other" />

        </RadioGroup>

        <EditText
            android:id="@+id/block_description"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_block_description"
            android:inputType="textMultiLine"
            android:autofillHints="true" />

        <TextView
            android:id="@+id/blockingInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blockingInformation" />

        <LinearLayout
            android:id="@+id/buttons_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="0"
                android:text="@android:string/cancel"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0"
                android:enabled="false"
                android:text="@android:string/ok"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</layout>