<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:background="@color/cardview_dark_background"
    app:startDestination="@id/itemsListFragment">

    <fragment
        android:id="@+id/itemsListFragment"
        android:name="com.example.sharingang.ui.fragments.ItemsListFragment"
        android:label="Items"
        tools:layout="@layout/fragment_items_list">
        <action
            android:id="@+id/action_itemsListFragment_to_newEditFragment"
            app:destination="@id/newEditFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_mapFragment"
            app:destination="@+id/mapFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_wishlistViewFragment"
            app:destination="@id/wishlistViewFragment" />
        <action
            android:id="@+id/action_itemsListFragment_to_chatsFragment"
            app:destination="@id/chatsFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_itemsListFragment_to_blockedUsersFragment2"
            app:destination="@id/blockedUsersFragment" />
    </fragment>
    <fragment
        android:id="@+id/newEditFragment"
        android:name="com.example.sharingang.ui.fragments.NewEditFragment"
        android:label="@string/item"
        tools:layout="@layout/fragment_new_edit_item">
        <action
            android:id="@+id/action_newEditFragment_to_itemsListFragment"
            app:destination="@id/itemsListFragment" />
        <argument
            android:name="item"
            android:defaultValue="@null"
            app:argType="com.example.sharingang.models.Item"
            app:nullable="true" />
        <action
            android:id="@+id/action_newEditFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailedItemFragment"
        android:name="com.example.sharingang.ui.fragments.DetailedItemFragment"
        android:label="Detailed View">
        <argument
            android:name="item"
            app:argType="com.example.sharingang.models.Item" />
        <action
            android:id="@+id/action_detailedItemFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment"
            app:popUpTo="@id/userProfileFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailedItemFragment_to_newEditFragment"
            app:destination="@id/newEditFragment" />
        <action
            android:id="@+id/action_detailedItemFragment_to_ARActivity"
            app:destination="@id/ARActivity"
            app:popUpTo="@id/detailedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.sharingang.ui.fragments.SearchFragment"
        android:label="Search">
        <action
            android:id="@+id/action_searchFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.sharingang.ui.fragments.MapFragment"
        android:label="Map">
        <action
            android:id="@+id/action_mapFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.sharingang.ui.fragments.UserProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/user_profile_fragment">
        <argument
            android:name="userId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_userProfileFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment"
            app:popUpTo="@id/detailedItemFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_userProfileFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:popUpTo="@id/itemsListFragment" />
        <action
            android:id="@+id/actionuserProfileFragmentToItemsListFragment"
            app:destination="@id/itemsListFragment"
            app:popUpTo="@id/userProfileFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_userProfileFragment_to_soldItemList"
            app:destination="@id/soldItemList" />
        <action
            android:id="@+id/action_userProfileFragment_to_subscriptionFragment"
            app:destination="@id/subscriptionFragment" />
        <action
            android:id="@+id/action_userProfileFragment_to_messageFragment"
            app:destination="@id/messageFragment" />
        <action
            android:id="@+id/action_userProfileFragment_to_blockFragment"
            app:destination="@id/blockFragment"
            app:popUpTo="@id/userProfileFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/wishlistViewFragment"
        android:name="com.example.sharingang.ui.fragments.WishlistViewFragment"
        android:label="@string/wishlist_menu_title">
        <action
            android:id="@+id/action_wishlistViewFragment_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="com.example.sharingang.ui.fragments.ReportFragment"
        android:label="Report User">
        <argument
            android:name="reporterId"
            app:argType="string" />
        <argument
            android:name="reportedId"
            app:argType="string" />
        <argument
            android:name="reportedName"
            app:argType="string" />
        <action
            android:id="@+id/action_reportFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment"
            app:popUpTo="@+id/reportFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_detailedItemFragment"
        app:destination="@id/detailedItemFragment" />
    <fragment
        android:id="@+id/soldItemList"
        android:name="com.example.sharingang.ui.fragments.SoldItemList"
        android:label="@string/sold_list_title"
        tools:layout="@layout/fragment_sold_item_list">
        <action
            android:id="@+id/action_soldItemList_to_detailedItemFragment"
            app:destination="@id/detailedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.sharingang.ui.fragments.ChatsFragment"
        android:label="Chats">
        <action
            android:id="@+id/action_chatsFragment_to_messageFragment"
            app:destination="@id/messageFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.sharingang.ui.fragments.MessageFragment"
        android:label="@string/chat">
        <argument
            android:name="partnerId"
            app:argType="string" />
        <argument
            android:name="partnerUsername"
            app:argType="string" />
        <argument
            android:name="partnerProfilePictureUrl"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_messageFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment"
            app:popUpTo="@id/messageFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/subscriptionFragment"
        android:name="com.example.sharingang.ui.fragments.SubscriptionFragment"
        android:label="Subscriptions" />
    <activity
        android:id="@+id/ARActivity"
        android:name="com.example.sharingang.ui.activities.ARActivity"
        android:label="activity_aractivity"
        tools:layout="@layout/activity_aractivity">
        <argument
            android:name="item"
            app:argType="com.example.sharingang.models.Item"
            app:nullable="false" />
    </activity>
    <fragment
        android:id="@+id/blockFragment"
        android:name="com.example.sharingang.ui.fragments.BlockFragment"
        android:label="Block a User">
        <action
            android:id="@+id/action_blockFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment"
            app:popUpTo="@id/blockFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="blockerId"
            app:argType="string" />
        <argument
            android:name="blockedId"
            app:argType="string" />
        <argument
            android:name="blockedName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/blockedUsersFragment"
        android:name="com.example.sharingang.ui.fragments.BlockedUsersFragment"
        android:label="@string/blocked_users"
        tools:layout="@layout/fragment_blocked_users" >
        <action
            android:id="@+id/action_blockedUsersFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
</navigation>
