...
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history"
                tools:layout_editor_absoluteX="-30dp">

                <EditText
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:ems="10"
                    android:hint="@string/messageHint"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_margin="2dp"
                    android:layout_weight="5"
                    android:contentDescription="@string/profilePicture"
                    app:srcCompat="@android:drawable/ic_menu_send" />
...
